Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-849

proxy.config.http.slow.log.threshold is unable to set from traffic_line -s

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 3.1.0, 3.0.1
    • 3.1.0
    • Configuration
    • None

    Description

      I am wondering how many config items from records have the same situation?

      [root@cache164 trafficserver]# traffic_line -s proxy.config.http.slow.log.threshold -v 30
      Layout configuration
                --prefix = '/usr'
           --exec_prefix = '/usr'
                --bindir = '/usr/bin'
               --sbindir = '/usr/sbin'
            --sysconfdir = '/etc/trafficserver'
               --datadir = '/usr/share/trafficserver'
            --includedir = '/usr/include/trafficserver'
                --libdir = '/usr/lib64/trafficserver'
            --libexecdir = '/usr/lib64/trafficserver/plugins'
         --localstatedir = '/var/trafficserver'
            --runtimedir = '/var/run/trafficserver'
                --logdir = '/var/log/trafficserver'
                --mandir = '/usr/share/man'
               --infodir = '/usr/share/info'
              --cachedir = '/var/cache/trafficserver'
      traffic_line: Only configuration vars can be set
      

      Attachments

        Activity

          People

            zym Zhao Yongming
            zym Zhao Yongming
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: