TS-849 fix some records variables for traffic_line -s setting

git-svn-id: https://svn.apache.org/repos/asf/trafficserver/traffic/trunk@1154888 13f79535-47bb-0310-9956-ffa450edef68